ci:简化 Docker镜像标签逻辑
-移除了根据不同的 GitHub 引用类型设置不同标签的逻辑
-

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,7 @@ jobs:
     - name: Determine Image Tags
       id: tags
       run: |
-        if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-          echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:${{ github.ref_name }},${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:latest" >> $GITHUB_OUTPUT
-        elif [ "${{ github.ref }}" == "refs/heads/main" ]; then
-          echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:main,${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:latest" >> $GITHUB_OUTPUT
+        echo "tags=${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:latest,${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:latest" >> $GITHUB_OUTPUT
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
