--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,6 +11,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USERNAME }}
+      DATE_TAG: $(date -u +'%Y-%m-%dT%H-%M-%S')
 
     steps:
     - name: Checkout code
@@ -40,3 +43,6 @@ jobs:
         push: true
         cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:buildcache
         cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/adapter-bottom:buildcache,mode=max
+        labels: |
+          org.opencontainers.image.created=${{ steps.tags.outputs.date_tag }}
+          org.opencontainers.image.revision=${{ github.sha }}
